[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/components/column_flow.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/model_selector.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/viewer_icon_#path1842_copy_1.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/viewer_icon_#path1840_copy_1.png" type="Texture" id=4]

[node name="ModelSelector" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.745098 )
margin_right = 1024.0
margin_bottom = 600.0

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Spacing" type="Control" parent="Margin/HBoxContainer"]
margin_right = 40.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 0 )

[node name="DiffusionModels" parent="Margin/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_right = 940.0
margin_bottom = 560.0
size_flags_horizontal = 3
thumbnail_node = "res://ui/components/model_thumbnail.tscn"
number_of_columns = 5

[node name="Spacing" parent="Margin/HBoxContainer/DiffusionModels" index="0"]
margin_right = 896.0

[node name="OptionButton" parent="Margin/HBoxContainer/DiffusionModels" index="1"]
margin_right = 896.0

[node name="Controls" parent="Margin/HBoxContainer/DiffusionModels" index="2"]
margin_right = 896.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="SearchBar" parent="Margin/HBoxContainer/DiffusionModels/Controls" index="0"]
margin_right = 812.0

[node name="ClearText" parent="Margin/HBoxContainer/DiffusionModels/Controls" index="1"]
margin_left = 816.0
margin_right = 840.0

[node name="Refresh" parent="Margin/HBoxContainer/DiffusionModels/Controls" index="2"]
margin_left = 844.0
margin_right = 868.0

[node name="ExternalPath" parent="Margin/HBoxContainer/DiffusionModels/Controls" index="3"]
margin_left = 872.0
margin_right = 896.0

[node name="Spacing2" parent="Margin/HBoxContainer/DiffusionModels" index="3"]
margin_right = 896.0

[node name="ScrollContainer" parent="Margin/HBoxContainer/DiffusionModels" index="4"]
margin_right = 896.0
margin_bottom = 560.0

[node name="Spacing2" type="Control" parent="Margin/HBoxContainer"]
margin_left = 944.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 40, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
custom_constants/margin_left = 0

[node name="Close" type="TextureButton" parent="Margin/MarginContainer"]
margin_left = 958.0
margin_right = 984.0
margin_bottom = 26.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[connection signal="external_path_requested" from="Margin/HBoxContainer/DiffusionModels" to="." method="_on_DiffusionModels_external_path_requested"]
[connection signal="refresh_requested" from="Margin/HBoxContainer/DiffusionModels" to="." method="_on_DiffusionModels_refresh_requested"]
[connection signal="pressed" from="Margin/MarginContainer/Close" to="." method="_on_Close_pressed"]

[editable path="Margin/HBoxContainer/DiffusionModels"]
